--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-slick": "^0.23.6",
+    "@types/react-router-dom": "^5.3.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "moment": "^2.29.1",
@@ -54,6 +55,5 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.0"
   }
 }
